devops/k8s/core/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wm-dev
---
apiVersion: v1
kind: Service
metadata:
  namespace: wm-dev
  name: fair-core
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: hazelcast
      port: 5701
      targetPort: 5701
  type: NodePort
  selector:
    app.kubernetes.io/name: fair-core
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wm-dev
  name: fair-core
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fair-core
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fair-core
    spec:
      containers:
        - image: 711274677999.dkr.ecr.ap-southeast-1.amazonaws.com/fair-core:latest
          imagePullPolicy: Always
          name: fair-core
          ports:
            - containerPort: 8080
            - containerPort: 5701
          resources:
            requests:
              memory: "1536Mi"
              cpu: "1"
            limits:
              memory: "1536Mi"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /fair-core/v1/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /fair-core/v1/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
          startupProbe:
            httpGet:
              path: /fair-core/v1/actuator/health/readiness
              port: 8080
            failureThreshold: 60
            periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wm-dev
  name: fair-core
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: drapia-metaverse-ingress
spec:
  rules:
    - http:
        paths:
          - path: /fair-core
            pathType: Prefix
            backend:
              service:
                name: fair-core
                port:
                  number: 80
#---
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  namespace: wm-dev
#  name: fair-core
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: fair-core
#  minReplicas: 2
#  maxReplicas: 4
#  targetCPUUtilizationPercentage: 80
